--- a/src/app/UI/schedule-calendar/schedule-calendar.component.html
+++ b/src/app/UI/schedule-calendar/schedule-calendar.component.html
@@ -126,10 +126,26 @@
               class="w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:text-white">
           </div>
 
-          <div>
+          <!-- <div>
             <label class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-1">Sport Categories</label>
             <input type="text" formControlName="sportName"
               class="w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:text-white">
+          </div> -->
+
+
+          <!-- Session Type -->
+          <div>
+            <label class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-1">Sport Categories</label>
+            <select formControlName="sportName"
+              class="w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:text-white">
+              <option value="" disabled selected>Choose a Sport Categories</option>
+              <option value="Workouts">Workouts</option>
+              <option value="Boxing">Boxing</option>
+              <option value="Bodybuilding">Bodybuilding</option>
+              <option value="CrossFit">CrossFit</option>
+              <option value="Personal trainer">Personal trainer</option>
+              <option value="Fitness">Fitness</option>
+            </select>
           </div>
 
           <!-- Form Actions -->
