--- a/src/app/landing-page/testimonials/testimonials.component.html
+++ b/src/app/landing-page/testimonials/testimonials.component.html
@@ -1,87 +1,21 @@
-<div class="w-full min-h-screen flex items-center bg-black text-white dark:bg-gray-50 dark:text-black">
-  <div class="max-w-full py-5 mt-10 mb-20 mx-auto overflow-hidden">
-    <div class="w-full flex items-center flex-col gap-1 justify-center mb-16 px-4">
-      <p class="text-sm sm:text-lg font-semibold text-rose-600">Words That Matter</p>
-      <h3 class="text-2xl sm:text-3xl md:text-4xl lg:text-5xl text-center font-semibold">See Why Clients Keep Coming
-        Back</h3>
-    </div>
-
-    <div class="flex flex-col gap-3">
-      <!-- Top Testimonials (Reverse Scroll) -->
-      <div style="mask-image:linear-gradient(to left, transparent 0%, black 20%, black 80%, transparent 95%)"
-        class="relative flex justify-around gap-5 overflow-hidden shrink-0">
-        <div class="max-w-full mx-auto">
-          <div class="px-4 md:px-10 mx-auto w-full">
-            <div
-              class="animate-scrollReverse flex flex-nowrap w-max min-w-full hover:[animation-play-state:paused] overflow-hidden relative gap-5 justify-around shrink-0">
-              <!-- Testimonial Cards -->
-              <div *ngFor="let testimonial of testimonialsTop"
-                class="flex flex-col justify-between h-[220px] rounded-sm border-[1.2px] border-white/20 dark:border-black/20 shrink-0 grow-0 md:w-[440px] sm:w-[320px] w-[280px]">
-                <p class="px-5 py-5 tracking-tight text-lg font-extralight md:text-lg">
-                  "{{testimonial.quote}}"
-                </p>
-                <div
-                  class="flex overflow-hidden h-[30%] md:h-[28%] gap-1 w-full border-t-[1.2px] border-white/10 dark:border-black/10">
-                  <div class="flex items-center w-3/4 gap-3 px-4 py-3">
-                    <img class="w-10 h-10 rounded" [src]="testimonial.image" [alt]="testimonial.name + ' avatar'">
-                    <div class="flex flex-col items-start justify-start flex-1 gap-0">
-                      <h5 class="text-base font-medium md:text-md">{{testimonial.name}}</h5>
-                      <p class="text-sm md:text-base mt-[-4px] text-white/50 dark:text-black/30">
-                        {{testimonial.role}}
-                      </p>
-                    </div>
-                  </div>
-                  <div class="w-[1px] bg-white/10 dark:bg-black/20"></div>
-                  <div class="flex items-center justify-center max-w-full mx-auto">
-                    <a target="_blank" href="">
-                      <img src="assets/login-logo.png" alt="Arrow Right Icon"
-                        class="w-[70px] h-[55px] text-white dark:text-black"/>
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+<section class="bg-black">
+  <div class="container">
+    <div class="container mx-auto px-4">
+          <h2 class="title-decor text-3xl md:text-4xl font-bold text-white text-center mb-4">
+            What Our <span class="text-red-600">Members Say</span>
+          </h2>
+          <div class="w-16 h-1 bg-[#f23849] mx-auto mb-6"></div>
+          <p class="slogan text-gray-300 max-w-2xl mx-auto text-center mb-12">
+            At Master GYM, dedication meets transformation. Our community thrives on expert guidance, state-of-the-art equipment,
+            and a motivating environment that empowers every individual to reach their fitness goals.
+          </p>
       </div>
 
-      <!-- Bottom Testimonials (Forward Scroll) -->
-      <div style="mask-image:linear-gradient(to left, transparent 0%, black 20%, black 80%, transparent 95%)"
-        class="relative flex justify-around gap-5 overflow-hidden shrink-0">
-        <div class="max-w-full mx-auto">
-          <div class="px-4 md:px-10 mx-auto w-full">
-            <div
-              class="animate-scroll flex flex-nowrap w-max min-w-full hover:[animation-play-state:paused] overflow-hidden relative gap-5 justify-around shrink-0">
-              <!-- Testimonial Cards -->
-              <div *ngFor="let testimonial of testimonialsBottom"
-                class="flex flex-col justify-between h-[220px] rounded-sm border-[1.2px] border-white/20 dark:border-black/20 shrink-0 grow-0 md:w-[440px] sm:w-[320px] w-[280px]">
-                <p class="px-5 py-5 tracking-tight text-lg font-extralight md:text-lg">
-                  "{{testimonial.quote}}"
-                </p>
-                <div
-                  class="flex overflow-hidden h-[30%] md:h-[28%] gap-1 w-full border-t-[1.2px] border-white/10 dark:border-black/10">
-                  <div class="flex items-center w-3/4 gap-3 px-4 py-3">
-                    <img class="w-10 h-10 rounded" [src]="testimonial.image" [alt]="testimonial.name + ' avatar'">
-                    <div class="flex flex-col items-start justify-start flex-1 gap-0">
-                      <h5 class="text-base font-medium md:text-md">{{testimonial.name}}</h5>
-                      <p class="text-sm md:text-base mt-[-4px] text-white/50 dark:text-black/30">
-                        {{testimonial.role}}
-                      </p>
-                    </div>
-                  </div>
-                  <div class="w-[1px] bg-white/10 dark:bg-black/20"></div>
-                  <div class="flex items-center justify-center max-w-full mx-auto">
-                    <a target="_blank">
-                      <img src="assets/login-logo.png" alt="Arrow Right Icon"
-                        class="w-[70px] h-[55px] text-white dark:text-black"/>
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+      <div
+          class="flex justify-center gap-6 mt-10 [mask-image:linear-gradient(to_bottom,transparent,black_25%,black_75%,transparent)] max-h-[738px] overflow-hidden">
+          <app-testimonials-column [testimonials]="firstColumn"></app-testimonials-column>
+          <app-testimonials-column [testimonials]="secondColumn" class="hidden md:block"></app-testimonials-column>
+          <app-testimonials-column [testimonials]="thirdColumn" class="hidden lg:block"></app-testimonials-column>
       </div>
-    </div>
   </div>
-</div>
+</section>
