--- a/src/app/landing-page/about/about.component.html
+++ b/src/app/landing-page/about/about.component.html
@@ -135,7 +135,7 @@
               <a class="text-white hover:text-black">{{trainer.userName}}</a>
             </h3>
             <div class="text-[14px] uppercase mb-[16px] text-red-500 font-medium transition-all duration-300">
-              {{trainer.roleName}}
+              Coach
             </div>
             <p class="text-[#bebebe] mb-[17px] transition-all duration-300 group-hover:text-[#4d4d4d]">
               {{trainer.description}}
