--- a/src/app/landing-page/best-trainer/best-trainer.component.html
+++ b/src/app/landing-page/best-trainer/best-trainer.component.html
@@ -64,7 +64,7 @@
             <!-- Trainer profession -->
             <div
               class="prof mt-3 text-sm text-white px-10 transition-opacity duration-400 opacity-0 group-hover:opacity-100 mb-4">
-              {{ trainer.roleName | titlecase }}
+              Coach
             </div>
 
             <!-- Trainer profession -->
